feat: harden public deployment and album privacy