@@ -1,6 +1,9 @@
 package com.example.springboot.config;
 
+import com.example.springboot.entity.User;
+import com.example.springboot.servise.UserService;
 import com.example.springboot.utils.JwtUtil;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.jsonwebtoken.Claims;
 import jakarta.annotation.Resource;
 import jakarta.servlet.FilterChain;
@@ -9,13 +12,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 @Component
@@ -23,6 +27,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     @Resource
     private JwtUtil jwtUtil;
+
+    @Resource
+    private UserService userService;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -41,26 +48,42 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             Claims claims = jwtUtil.parseToken(token);
             Long userId = claims.get("userId", Long.class);
             String username = claims.get("username", String.class);
+            User user = userService.findByUserId(userId);
+
+            if (user == null || !username.equals(user.getAccount())
+                    || !jwtUtil.matchesStoredToken(token, user.getToken())
+                    || user.getRole() == null || "DISABLED".equals(user.getRole())) {
+                writeUnauthorized(response);
+                return;
+            }
 
             Map<String, Object> principal = new HashMap<>();
-            principal.put("userId", userId);
-            principal.put("username", username);
+            principal.put("userId", user.getUserId());
+            principal.put("username", user.getAccount());
+            principal.put("role", user.getRole());
 
             UsernamePasswordAuthenticationToken authentication =
-                    new UsernamePasswordAuthenticationToken(principal, null, Collections.emptyList());
+                    new UsernamePasswordAuthenticationToken(
+                            principal,
+                            null,
+                            List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole())));
             SecurityContextHolder.getContext().setAuthentication(authentication);
         } catch (Exception e) {
-            response.setStatus(401);
-            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
-            response.setCharacterEncoding("UTF-8");
-            Map<String, Object> body = new HashMap<>();
-            body.put("code", 401);
-            body.put("message", "Token无效或已过期");
-            body.put("data", null);
-            response.getWriter().write(new com.fasterxml.jackson.databind.ObjectMapper().writeValueAsString(body));
+            writeUnauthorized(response);
             return;
         }
 
         filterChain.doFilter(request, response);
+    }
+
+    private void writeUnauthorized(HttpServletResponse response) throws IOException {
+        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+        response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+        response.setCharacterEncoding("UTF-8");
+        Map<String, Object> body = new HashMap<>();
+        body.put("code", 401);
+        body.put("message", "Token无效、已过期或已在其他设备重新登录");
+        body.put("data", null);
+        response.getWriter().write(new ObjectMapper().writeValueAsString(body));
     }
 }
